# CivicLens

./: .gitignore  CLAUDE.md  nohup.out  package-lock.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_case_based_submission.py  0003_requirement_snapshot.py  0004_search_and_summarization.py  0005_add_dossier_id_to_notification_submission.py  0006_make_citizen_id_nullable.py
backend/src/: config.py  dependencies.py  main.py
backend/src/api/: vneid_proxy.py
backend/src/models/: __init__.py  audit_log.py  base.py  case_type.py  citizen.py  department.py  document_requirement.py  document_type.py  dossier.py  dossier_document.py  notification.py  routing_rule.py  scanned_page.py  staff_member.py  step_annotation.py  submission.py  workflow_step.py
backend/src/security/: abac.py  audit_interceptor.py  auth.py
backend/src/seeds/: seed_data.py
backend/src/services/: ai_client.py  analytics_service.py  audit_service.py  dossier_service.py  local_storage.py  notification_service.py  oss_client.py  quality_service.py  review_service.py  routing_service.py  search_service.py  submission_service.py  summarization_service.py  template_service.py  workflow_service.py
backend/src/workers/: backfill_summaries.py  celery_app.py  classification_worker.py  ocr_worker.py  summarization_worker.py
backend/tests/contract/: test_search_contract.py
backend/tests/integration/: test_analytics_api.py  test_entity_api.py  test_full_pipeline.py  test_queue_preview.py  (+2 more)
(+204 files in other folders)
